# SnakeRobot_ROS

Robo_control/: CMakeLists.txt  package.xml
Robo_control/config/: mcontrol.yaml
Robo_control/launch/: mcontroller.launch
Robot_main/: CMakeLists.txt  package.xml  urdf.rviz
Robot_main/config/: joint_names_model8.yaml
Robot_main/launch/: display.launch  gazebo.launch
Robot_main/meshes/: M1.STL  M2.STL  M3.STL  M4.STL  M5.STL  M6.STL  M7.STL  M8.STL  M9.STL  Tail.STL  base_link.STL
Robot_main/robots/: model8.urdf
Robot_main/src/: publisher.py
Robot_main/urdf/: model8.urdf
